--- a/이것이 취업을 위한 코딩 테스트다 with 파이썬/CH11.그리디 문제.ipynb
+++ b/이것이 취업을 위한 코딩 테스트다 with 파이썬/CH11.그리디 문제.ipynb
@@ -119,11 +119,52 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "* 아이디어\n",
+    "* datas이 오름차순 정리가 되어있다면,\n",
+    "* 1, 1, 2, 3라고하면, \n",
+    "* 1은 맨 앞의 1로 만들고\n",
+    "* 2는 앞의 1두개로 만들고\n",
+    "* 3부터 4는 앞에서 보장된 1,2 만드는 방법에 3번째 인자인 2를 더하면 되는 것\n",
+    "* 5부터 7은 앞에서 보장된 1~4 만드는 방법에 4번째 인자인 3을 더하면 되는 것"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "8\n",
+      "1\n",
+      "15\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 책문제\n",
+    "sample = [\n",
+    "    [ 5, [3, 2, 1, 1, 9] ],\n",
+    "    [ 3, [3, 5, 7] ],\n",
+    "    [ 5, [3, 2, 1, 1, 7]]\n",
+    "]\n",
+    "# 예시 input\n",
+    "\n",
+    "for N, datas in sample:\n",
+    "    sortData = sorted( datas )\n",
+    "    \n",
+    "    result = 1\n",
+    "    for data in sortData:\n",
+    "        if result < data:  break\n",
+    "        result += data\n",
+    "        \n",
+    "    print(result)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -134,10 +175,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "8\n",
+      "25\n"
+     ]
+    }
+   ],
+   "source": [
+    "from itertools import combinations\n",
+    "\n",
+    "sample = [\n",
+    "    [ 5, 3, [1, 3, 2, 3, 2] ],\n",
+    "    [ 8, 5, [1, 5, 4, 3, 2, 4, 5, 2] ]\n",
+    "]\n",
+    "\n",
+    "for N, M, datas in sample:\n",
+    "    sortData = sorted( datas ) + [999999999]\n",
+    "    \n",
+    "    nextIndex = [ i+1 for i in range(len(datas)) ]\n",
+    "    \n",
+    "    for i in range( N-1, 0, -1 ):\n",
+    "        if sortData[i] == sortData[i-1]:\n",
+    "            nextIndex[ i-1 ] = nextIndex[ i ]\n",
+    "            \n",
+    "    result = 0\n",
+    "    for index in range(N):\n",
+    "        result += N- nextIndex[ index ]\n",
+    "    \n",
+    "    print( result )"
+   ]
   },
   {
    "cell_type": "markdown",
